Align main menu icons and text fixes https://github.com/aegisbigdata/documentation/issues/154

--- a/aegis-web/yo/app/styles/aegis.css
+++ b/aegis-web/yo/app/styles/aegis.css
@@ -1,3 +1,13 @@
+.menu_icon {
+  width: 30px !important;
+  display: inline-block !important; 
+  margin-right: 10px;
+  text-align: center;
+}
+.menu_icon > img {
+  max-width: 30px;
+  max-height: 22px;
+}
 .panel-logo-img {
   height: 50px;
 }
